--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,11 +15,14 @@
     "ag-grid-react": "^27.3.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
-    "react": "^18.1.0",
+    "cpf-cnpj-validator": "^1.0.3",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "^18.1.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.1",
+    "telefone": "^1.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
