--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,10 +14,11 @@
     "ag-grid-enterprise": "^27.3.0",
     "ag-grid-react": "^27.3.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.0-beta1",
     "cpf-cnpj-validator": "^1.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-bootstrap-sidebar-menu": "^2.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
