--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "oracledb": "^5.3.0"
+    "multer": "^1.4.5-lts.1",
+    "oracledb": "^5.3.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
