--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "oracledb": "^5.3.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
